Fixed in svn version:

  * New configure wasn't working properly for some Macintosh due to a
    missing line (commit 11976)
  * Possible conflict between FFTW in MKL and in Modules/fftw.c solved 
    (commit 11980)

Incompatible changes in 5.3.0 version:

  * Module "gvecw", in Modules/gvecw.f90, includes previous CP module "gvecw"
    and several PW variables taken out from module "wvfct":
    qcutz, ecfixed, q2sigm, ecutwfc
    New variable gcutw=ecutwfc/tpiba2 used also in PW every time "gk_sort"
    is called - gcutw is initialized at startup or when data files are read
  * Common modules for linear-response codes moved to new directory LR_Modules

                               * * * * *

New in 5.3.0 version:

  * projwfc.x: PDOS with PAW projectors and all-electron basis functions
  * X3LYP hybrid functional (using VWN_1_RPA)
  * B3LYP hybrid functional (using VWN) and B3LYP-V1R (using VWN_1_RPA)

Fixed in 5.3.0 version:

  * projwfc.x: When pw.x was run on a different number of processors and
    twfcollect was not true, projwfc.x was silently giving wrong results.
    Thanks to Hande Toffoli for reporting.
  * Usage of "~" in pseudo_dir is sometimes acceptable by fortran but not 
    by C. If so, a message is printed instead of weird characters in MD5.
  * PHonon: Gamma-specific code segfaulting with GGA
  * NaN's in stress with nonlocal functionals when the physical dimensions of
    FFT arrays is larger than the true ones and arrays are padded with zeros
  * pw.x: "task-group" parallelization wasn't working properly when the number
    of bands was smaller than the number of task groups. Affects v.5.2.1.
  * TDDFPT: lrpa (Random Phase Approximation) keyword was not present in 
    the namelist for turbo_lanczos.x code. The turboEELS code was not 
    working correctly with just one k point; for metals there were wrong
    weights leading to small errors near the Fermi level; the code was not
    working correctly with ultrasoft PP's. 