@@ -8,7 +8,6 @@ MODFLAGS= $(MOD_FLAG)../iotk/src $(MOD_FLAG)../Modules $(MOD_FLAG).
 OBJS = \
 avrec.o \
 atomic_number.o \
-bachel.o \
 capital.o \
 cryst_to_car.o \
 dost.o \
